fix: z-index

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -168,7 +168,7 @@ a:visited,
   font-family: $body-font-family;
   color: #888;
   position: absolute;
-  z-index: 999;
+  z-index: 4;
   top: -25px;
   text-align: center;
   left: 200px
@@ -178,7 +178,7 @@ a:visited,
   font-family: $body-font-family;
   color: #888;
   position: absolute;
-  z-index: 999;
+  z-index: 4;
   top: 220px;
   left: -75px;
   text-align: center;
